Creating site for 0.5-SNAPSHOT

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
   
     
             <div class="xleft">
-        Last Published: 2012-02-22 09:29
-                  &nbsp;| Version: 0.3-SNAPSHOT
+        Last Published: 2012-02-22 11:29
+                  &nbsp;| Version: 0.5-SNAPSHOT
                       </div>
             <div class="xright">            <a href="http://scala-tools.org/" class="externalLink">scala-tools</a>
             |
@@ -121,8 +121,8 @@
 <p>If there are problems please let us know.</p>
 </div>
 <div class="section"><h2><a name="Requirements"></a>Requirements</h2>
-<ul><li>Maven 2.0.9</li>
-<li>JDK 1.5</li>
+<ul><li>Maven 3.x</li>
+<li>JDK 1.6</li>
 <li><bold>No need to install <a href="http://scala-lang.org" class="externalLink">scala</a> !</bold></li>
 </ul>
 </div>
