--- a/usage.html
+++ b/usage.html
@@ -55,8 +55,8 @@
   
     
             <div class="xleft">
-        Last Published: 2012-02-22 09:29
-                  &nbsp;| Version: 0.3-SNAPSHOT
+        Last Published: 2012-02-22 11:29
+                  &nbsp;| Version: 0.5-SNAPSHOT
                       </div>
             <div class="xright">            <a href="http://scala-tools.org/" class="externalLink">scala-tools</a>
             |
@@ -129,9 +129,9 @@
 			&lt;version&gt;2.0&lt;/version&gt;
 		&lt;/dependency&gt;
 		&lt;dependency&gt;
-			&lt;groupId&gt;org.scala-tools&lt;/groupId&gt;
+			&lt;groupId&gt;com.jsuereth&lt;/groupId&gt;
 			&lt;artifactId&gt;scala-mojo-support&lt;/artifactId&gt;
-			&lt;version&gt;0.3-SNAPSHOT&lt;/version&gt;
+			&lt;version&gt;0.4&lt;/version&gt;
 		&lt;/dependency&gt;
         ...
 	&lt;/dependencies&gt;
