Creating site for 0.5-SNAPSHOT

--- a/usage.html
+++ b/usage.html
@@ -55,7 +55,7 @@
   
     
             <div class="xleft">
-        Last Published: 2012-02-22 11:29
+        Last Published: 2012-02-22 11:30
                   &nbsp;| Version: 0.5-SNAPSHOT
                       </div>
             <div class="xright">            <a href="http://scala-tools.org/" class="externalLink">scala-tools</a>
@@ -154,9 +154,9 @@
 				&lt;artifactId&gt;maven-plugin-plugin&lt;/artifactId&gt;
 				&lt;dependencies&gt;
 					&lt;dependency&gt;
-						&lt;groupId&gt;org.scala-tools&lt;/groupId&gt;
+						&lt;groupId&gt;com.jsuereth&lt;/groupId&gt;
 						&lt;artifactId&gt;scala-mojo-support&lt;/artifactId&gt;
-						&lt;version&gt;0.3-SNAPSHOT&lt;/version&gt;
+						&lt;version&gt;0.4&lt;/version&gt;
 					&lt;/dependency&gt;
 				&lt;/dependencies&gt;
 			&lt;/plugin&gt;
